--- a/notebook/2018-08-23_unique_expressed_genes.ipynb
+++ b/notebook/2018-08-23_unique_expressed_genes.ipynb
@@ -40,7 +40,7 @@
    ],
    "source": [
     "# Setup notebook\n",
-    "nbconfig = Nb.setup_notebook(seurat_dir='../scrnaseq-wf/data/scrnaseq_combine_force')"
+    "nbconfig = Nb.setup_notebook(seurat_dir='../output/scrnaseq-wf/scrnaseq_combine_force')"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw = pd.read_parquet('../scrnaseq-wf/data/raw.parquet')"
+    "raw = pd.read_parquet('../output/scrnaseq-wf/raw.parquet')"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clusters = pd.read_parquet('../scrnaseq-wf/data/clusters.res.0.4.parquet')"
+    "clusters = pd.read_parquet('../output/scrnaseq-wf/clusters.res.0.4.parquet')"
    ]
   },
   {
